2022-03-03  Anjali Kumar  <anjalik_22@apple.com>

        Add myself (Anjali Kumar) to contributors.json
        https://bugs.webkit.org/show_bug.cgi?id=237449

        Reviewed by Patrick Angle.

        * metadata/contributors.json: Added myself.

2022-03-01  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Sync personal fork by default
        https://bugs.webkit.org/show_bug.cgi?id=237324
        <rdar://problem/89618617>

        Reviewed by Dewei Zhu.

        * metadata/project_config: Add webkitscmpy.update-fork option.

2022-03-02  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Build failure with libstdc++ (>= 6) when cross-compiling (fatal error: stdlib.h: No such file or directory)
        https://bugs.webkit.org/show_bug.cgi?id=161697
        <rdar://problem/89613152>

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/WebKitCompilerFlags.cmake: Go through CMake instead of the plain "env"
        program for the sake of portability.

2022-03-01  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Build failure with libstdc++ (>= 6) when cross-compiling (fatal error: stdlib.h: No such file or directory)
        https://bugs.webkit.org/show_bug.cgi?id=161697

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/WebKitCompilerFlags.cmake: Set LANG=C in compiler invocation to ensure its
        output is consistent and the checks are independent from the system locale configuration.

2022-03-01  Basuke Suzuki  <basuke.suzuki@sony.com>

        [CMake] Disabling ENABLE_WEBCORE is ignored when cmake configuration runs again.
        https://bugs.webkit.org/show_bug.cgi?id=237170

        Reviewed by Fujii Hironori.

        CMake variables which has chance to set from outside should be cached in CMake configuration cache.
        Unless cacheing, the result of building the generated project is not consisitent because the other
        configuration may run while building.
