@@ -1671,6 +1671,16 @@
    },
    {
       "emails" : [
+         "djg@apple.com"
+      ],
+      "github" : "djg",
+      "name" : "Dan Glastonbury",
+      "nicks" : [
+         "djg"
+      ]
+   },
+   {
+      "emails" : [
          "danw@gnome.org"
       ],
       "name" : "Dan Winship",
